--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "robinvdvleuten@gmail.com"
         }
     ],
+    "type": "library",
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
@@ -19,6 +20,11 @@
     "autoload": {
         "psr-0": {
             "React\\NNTP": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
         }
     }
 }
