--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
         }
     ],
     "type": "library",
+    "license": "MIT",
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
         "evenement/evenement": "1.0.*",
         "react/socket": "0.2.*",
         "react/stream": "0.2.*",
-        "react/promise": "1.0.*",
-        "react/curry": "1.1.*"
+        "react/promise": "1.0.*"
     },
     "autoload": {
         "psr-0": {
