--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
-        "evenement/evenement": "1.0.*",
-        "react/socket": "0.2.*",
-        "react/stream": "0.2.*",
-        "react/promise": "1.0.*"
+        "evenement/evenement": "2.0.*@dev",
+        "react/socket": "0.3.*@dev",
+        "react/stream": "0.3.*@dev",
+        "react/promise": "1.0.*@dev"
     },
     "autoload": {
         "psr-0": {
