--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-0": {
-            "React\\NNTP": "src/"
+            "React\\Nntp": "src/"
         }
     },
     "extra": {
