--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "react/react": "dev-socket-client",
+        "react/react": "0.3.*@dev",
         "react/promise": "1.0.*@dev"
     },
     "autoload": {
