--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "require": {
         "php": ">=5.4.0",
         "react/react": "0.3.*@dev",
-        "react/promise": "1.0.*@dev",
-        "react/curry": "~1.0"
+        "react/promise": "1.0.*@dev"
     },
     "autoload": {
         "psr-0": {
