--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,10 +1,22 @@
+before_commands:
+    - composer install --dev
+
 tools:
-    php_cs_fixer: true
+    php_code_coverage:
+        filter:
+            paths: [ 'src' ]
     php_code_sniffer:
         config:
             standard: PSR1
+    php_cs_fixer: true
     php_mess_detector: true
     php_analyzer:
         filter:
-            excluded_paths: ["*/Tests/*"]
+            excluded_paths: [ 'tests' ]
+        doc_comment_fixes:
+            enabled: true
+        reflection_fixes:
+            enabled: true
+        use_statement_fixes:
+            order_alphabetically:  true
     sensiolabs_security_checker: true
