--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -71,9 +71,9 @@ Vagrant.configure("2") do |config|
   # # }
   #
   config.vm.provision :puppet do |puppet|
-    puppet.module_path = ["modules", "modules-src"]
+    puppet.module_path = "modules"
     puppet.manifests_path = "manifests"
-    
+
     puppet.manifest_file  = "default.pp"
 
     puppet.options = "--verbose --debug"
