--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,21 @@ language: php
 
 php:
   - 5.4
+  - 5.5
+
+matrix:
+    allow_failures:
+        - php: 5.5
 
 before_script:
   - composer self-update
-  - composer install --dev --prefer-source
+  - composer install --dev --prefer-source --no-interaction
 
-script: phpunit --coverage-text
+script:
+  - mkdir -p build/logs
+  - php bin/phpunit --coverage-text
+
+after_script:
+    - php vendor/bin/coveralls
+    # or enable logging
+    - php vendor/bin/coveralls -v
