--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ script:
   - php bin/phpunit --coverage-text
 
 after_script:
-    - php vendor/bin/coveralls
+    - php bin/coveralls
     # or enable logging
-    - php vendor/bin/coveralls -v
+    # - php bin/coveralls -v
