--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-        "react/react": "0.3.*@dev",
-        "react/promise": "1.0.*@dev"
+        "react/react": "0.3.*",
+        "react/promise": "1.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
