--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
+        "evenement/evenement": "1.0.*",
         "react/react": "0.3.*",
         "react/promise": "1.0.*"
     },
