--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
+        "phake/phake": "2.0.*@dev",
         "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
