--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.4.0",
         "evenement/evenement": "1.0.*",
         "react/react": "0.3.*",
-        "react/promise": "1.0.*"
+        "react/promise": "1.0.*",
+        "symfony/property-access": "2.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
